--- a/assets/css/theme.css
+++ b/assets/css/theme.css
@@ -1,4 +1,4 @@
 body {
   font-family: Lato;
-  background-image:url("https://waterforliving.github.io/assets/img/background.png")
+  background-image:url("http://waterforliving.github.io/assets/img/background.png")
 }
