--- a/assets/css/theme.css
+++ b/assets/css/theme.css
@@ -1,5 +1,5 @@
 body {
-  background-image:url("../../background.png") fixed;
+  background-image:url("../../background.png");
   margin: 0;
   padding: 0;
   font-family: Lato, Open Sans, Arial, sans-serif;
