--- a/assets/css/theme.css
+++ b/assets/css/theme.css
@@ -1,5 +1,5 @@
 body {
-  background-image:url("../../background.png");
+  background-image:url("https://waterforliving.github.io/assets/img/background.png");
   margin: 0;
   padding: 0;
   background-size: cover;
